The work done: - the collection was replaced; - the method of conducting tests was fixed, now all methods are run before each test first after the test everything after; - the method of calling the constructor was changed to increase reliability.